Add moonphase and sunrise/sunset API.
